syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/users.proto";
import "services/shops.proto";
import "services/auth.proto";

option java_multiple_files = true;

service PermissionService {
  rpc GetIdToken(Jwt) returns (Jwt) {}
  rpc Refresh(Jwt) returns (TokenResult) {}
  rpc InternalGenerateToken(GenerateTokenRequest) returns (TokenResult) {}
}

message GenerateTokenRequest {
  UserId userId = 1;
  repeated StaffInfo staffInfos = 2;
}
