syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/users.proto";
import "services/shops.proto";
import "services/auth.proto";

option java_multiple_files = true;

service SecurityTokenService {
  rpc FindToken(ConnectionId) returns (Jwt) {}
  rpc GenerateToken(GenerateTokenRequest) returns (ConnectionId) {}
}

message GenerateTokenRequest {
  UserId userId = 1;
  repeated StaffInfo staffInfos = 2;
}
message GenerateResult {
  Result res = 1;
  enum Result {
    CREARTED = 0;
  }
}
