syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

option java_multiple_files = true;

message ShopId {
  int32 value = 1;
}

message ShopInfo {
  ShopId id = 1;
  string name = 2;
}

message Role {
  string value = 1;
}

message StaffInfo {
  ShopId shopId = 1;
  Role role = 2;
}
